cmake_minimum_required(VERSION 3.12)

if(heap1_enabled)
    message("Enabling Heap1")
    add_library(FreeRTOS_MemMang heap_1.c)
elseif(heap2_enabled)
    message("Enabling Heap2")
    add_library(FreeRTOS_MemMang heap_2.c)
elseif(heap3_enabled)
    message("Enabling Heap3")
    add_library(FreeRTOS_MemMang heap_3.c)
elseif(heap4_enabled)
    message("Enabling Heap4")
    add_library(FreeRTOS_MemMang heap_4.c)
elseif(heap5_enabled)
    message("Enabling Heap5")
    add_library(FreeRTOS_MemMang heap_5.c)
else()
    message("No Heap Enabled")
endif()

